change ln 55 at landing-page.html

--- a/landing-page.html
+++ b/landing-page.html
@@ -54,7 +54,7 @@
                 </svg>
                 <div class="flex lg:hidden items-center gap-[8px]">
                     <i class="fa-solid fa-bell text-[#005555] hover:text-[#196666] text-[20px] cursor-pointer"></i>
-                    <img src="https://source.unsplash.com/100x100/?korea,people" alt="profile"
+                    <img src="https://source.unsplash.com/100x100/?man" alt="profile"
                         class="w-[32px] h-[32px] rounded-full">
                 </div>
             </div>
