--- a/index.html
+++ b/index.html
@@ -266,11 +266,9 @@
                             <a href="#" class="font-[600] hover:text-[#196666]">Lupa Password?</a>
                         </div>
 
-                        <button
+                        <button onclick="window.location.href= './landing-page.html'"
                             class="w-[90%] h-[36px] bg-[#005555] rounded-md text-white text-[14px] font-[300] hover:bg-[#196666]">
-                            <a href="./landing-page.html">
-                                Login
-                            </a>
+                            Login
                         </button>
                         <p>Atau</p>
                         <button type="submit"
